# multi-domain-poc

./: .gitignore  Dockerfile  README.md  docker-compose-prod.yml  docker-compose.yml  example.env  example.env.caddy  pyproject.toml
app/: config.py  main.py  middleware.py  models.py  routers.py  schemas.py  services.py  static_files.py  utils.py
config/: Caddyfile  Dockerfile.caddy  backend-api.conf  custom-domain-http.conf  custom-domain-https-conf.template  frontend-nginx.conf  frontend.conf
docs/: architecture-ascii.md  architecture.md  deployment.md  index.md  initial_project_creation.md  production-checklist.md  reverse_proxy.md  script-executor.md
frontend/: Dockerfile  example.env  package-lock.json  package.json
frontend/src/: App.css  App.tsx  config.ts  index.css
frontend/src/pages/Home/: index.tsx  style.css
frontend/src/pages/ProjectUpdate/: index.tsx  style.css
frontend/src/services/: api.ts
frontend/src/types/: project.ts
script_executor/: README.md  configure-custom-domain.sh  main.py  remove-custom-domain-config.sh
scripts/: custom-domain-https.sh  format.sh  lint.sh
static_app/: main.py
